--- a/tests/php/i18n/i18nTest/_fakewebroot/themes/testtheme1/lang/de.yml
+++ b/tests/php/i18n/i18nTest/_fakewebroot/themes/testtheme1/lang/de.yml
@@ -1,11 +1,11 @@
 de:
   i18nTestTheme1:
     LAYOUTTEMPLATE: Theme1 Layout Template (de)
-    SPRINTFNAMESPACE: Theme1 My replacement: %s (de)
+    PLACEHOLDERNAMESPACE: Theme1 My replacement: {replacement} (de)
   i18nTestTheme1Include:
     WITHNAMESPACE: Theme1 Include Entity with Namespace (de)
-    SPRINTFINCLUDENAMESPACE: Theme1 My include replacement: %s (de)
+    PLACEHOLDERINCLUDENAMESPACE: Theme1 My include replacement: {replacement} (de)
   NONAMESPACE: Theme1 Include Entity without Namespace (de)
-  SPRINTFINCLUDENONAMESPACE: Theme1 My include replacement no namespace: %s (de)
+  PLACEHOLDERINCLUDENONAMESPACE: Theme1 My include replacement no namespace: {replacement} (de)
   LAYOUTTEMPLATENONAMESPACE: Theme1 Layout Template no namespace (de)
-  SPRINTFNONAMESPACE: Theme1 My replacement no namespace: %s (de)
+  PLACEHOLDERNONAMESPACE: Theme1 My replacement no namespace: {replacement} (de)
